Merge branch 'Alex's-branch' into Lev's-Branch